almost finish gettext msgid rework

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -15,11 +15,11 @@
             <h5>{% trans "str_About_us" %}</h5>
             <ul>
                 <li><a href="{% url 'about'%}">{% trans "str_About" %}</a></li>
-                <li><a href="{% url 'contact'%}">{% trans "Contact Us" %}</a></li>
+                <li><a href="{% url 'contact'%}">{% trans "str_Contact_us" %}</a></li>
             </ul>
         </div>
         <div class="col-sm">
-            <h5>{% trans "Support" %}</h5>
+            <h5>{% trans "str_Support" %}</h5>
             <ul>
                 <li><a href="{% url 'faq'%}">{% trans "str_FAQ" %}</a></li>
                 <li><a href="{% url 'on_site'%}">{% trans "str_On_site" %}</a></li>
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <div class="col-sm">
-          <h5>{% trans "legal" %}</h5>
+          <h5>{% trans "str_Legal" %}</h5>
           <ul>
             <li><a href="{% url 'privacy' %}">{% trans "str_Privacy_policies" %}</a></li>
             <li><a href="{% url 'copyright' %}">{% trans "str_Copyright_notices" %}</a></li>
