--- a/templates/registration/change_password.html
+++ b/templates/registration/change_password.html
@@ -21,6 +21,6 @@
 <form method="post">
   {% csrf_token %}
   {{ form.as_table }}
-  <button type="submit">{% trans "Save changes"%}</button>
+  <button type="submit">{% trans "str_Save_changes"%}</button>
 </form>
 {% endblock %}
