--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -2,5 +2,5 @@
 {% load i18n %}
 
 {% block content %}
-  <p>{% trans "We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder."%}</p>
+  <p>{% trans "str_password_reset_email_sent"%}</p>
 {% endblock %}
