--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -2,10 +2,10 @@
 {% load i18n %}
 
 {% block header %}
-<h1>{% trans 'Your password has been changed!'%}</h1>
+<h1>{% trans 'str_password_changed'%}</h1>
 
 {% endblock %}
 
 {% block content %}
-  <p><a href="{% url 'login' %}">{% trans "log in again?"%}</a></p>
+  <p><a href="{% url 'login' %}">{% trans "str_login_again"%}</a></p>
 {% endblock %}
