--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -2,33 +2,33 @@
 {% load i18n %}
 
 {% block header %}
-<h1>{% trans 'Password reset confirmation'%}</h1>
+<h1>{% trans 'str_Password_reset_confirmation'%}</h1>
 {% endblock %}
 
 {% block content %}
     {% if validlink %}
-        <p>{% trans "Please enter (and confirm) your new password." %}</p>
+        <p>{% trans "str_enter_and_confirm_new_password" %}</p>
         <form action="" method="post">
         {% csrf_token %}
             <table>
                 <tr>
                     <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">{% trans "New password:"%}</label></td>
+                        <label for="id_new_password1">{% trans "str_New_password"%}:</label></td>
                     <td>{{ form.new_password1 }}</td>
                 </tr>
                 <tr>
                     <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">{% trans "Confirm password:" %}</label></td>
+                        <label for="id_new_password2">{% trans "str_Confirm_password" %}:</label></td>
                     <td>{{ form.new_password2 }}</td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" value="{% trans 'Change my password'%}" /></td>
+                    <td><input type="submit" value="{% trans 'str_Change_password'%}" /></td>
                 </tr>
             </table>
         </form>
     {% else %}
-        <h1>{% trans "Password reset failed" %}</h1>
-        <p>{% trans "The password reset link was invalid, possibly because it has already been used. Please request a new password reset."%}</p>
+        <h1>{% trans "str_Password_reset_failed" %}</h1>
+        <p>{% trans "str_password_reset_link_invalid"%}</p>
     {% endif %}
 {% endblock %}
