--- a/meeting/templates/pilot_summary.html
+++ b/meeting/templates/pilot_summary.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block page_title %}
-{% blocktrans %}Pilot overview: {{pilot}}{% endblocktrans %}
+{% trans 'str_Pilot_overview' %}: {{pilot}}
 {% endblock %}
 
 
