--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -85,7 +85,7 @@
                        class="form-control form-control-user"
                        placeholder="{%trans "str_Password" %}"/>
                     </div>
-                    <input type="submit" class="btn btn-primary btn-user btn-block" value="{% trans 'Login' %}"></input>
+                    <input type="submit" class="btn btn-primary btn-user btn-block" value="{% trans 'str_Login' %}"></input>
                   </form>
                   <hr>
                   <div class="text-center">
