--- a/templates/includes/alert_messages.html
+++ b/templates/includes/alert_messages.html
@@ -3,12 +3,12 @@
 
 <!-- info messages -->
 {% get_chunk 'global_info_messsage' as message %}
-{% if message.cotent.strip %}
+{% if message %}
 <div class="alert alert-info alert-dismissible" role="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
-  {{ message|safe}}
+  {{ message.content|safe}}
 </div>
 {% endif %}
 
