add timeslot aviable proto

--- a/meeting/templates/index.html
+++ b/meeting/templates/index.html
@@ -94,6 +94,7 @@
   <br>
   <a href="{% url 'res_conf_email'%}"> reservation confirmation email</a>
   <br>
+  <a href="{% url 'slot_aviable'%}">slots</a>
 </span>
 
 {% endblock%}
