remove radio_call_sign and replace it by django_aircraft_registration_field

--- a/meeting/templates/includes/elements/reservation_detail.html
+++ b/meeting/templates/includes/elements/reservation_detail.html
@@ -34,8 +34,8 @@
         <td>{{res.for_sale}}</td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'str_Origin_city'%}</th>
-        <td>{{res.origin_city}}</td>
+        <th scope="row">{% trans 'str_Origin_city_code'%}</th>
+        <td>{{res.origin_city_code}}</td>
         <th scope="row">{% trans 'str_Origin_field'%}</th>
         <td>{{res.origin_field}}</td>
       </tr>
