--- a/meeting/templates/pilot_reservation_list.html
+++ b/meeting/templates/pilot_reservation_list.html
@@ -112,11 +112,11 @@
     </div> <!-- End Right -->
     <div class="">
     {% if res.canceled %}
-        <h5 class="text-danger">{% trans 'str_Canceled'%}</h5>
+        <h5 class="badge badge-pill badge-danger">{% trans 'str_Canceled'%}</h5>
     {% elif res.confirmed %}
-        <h5 class="text-primary">{% trans 'str_Confirmed'%}</h5>
+        <h5 class="badge badge-pill badge-primary">{% trans 'str_Confirmed'%}</h5>
     {% else %}
-        <h5 class="text-secondary">{% trans 'str_Waiting_for_validation'%}</h5>
+        <h5 class="badge badge-pill badge-secondary">{% trans 'str_Waiting_for_validation'%}</h5>
     {%endif%}
     </div>
   </div>
