--- a/templates/emails/includes/base/header_row.html
+++ b/templates/emails/includes/base/header_row.html
@@ -35,7 +35,7 @@
                         is visible.
                       -->
                       <td align="left" valign="middle" id="invisibleIntroduction" class="flexibleContainerBox" style="display:none !important; mso-hide:all;">
-                        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:100%;">msgid "This message is not display correctly?"
+                        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:100%;">
 
                           <tr>
                             <td align="left" class="textContent">
