--- a/templates/emails/includes/base/header_row.html
+++ b/templates/emails/includes/base/header_row.html
@@ -1,4 +1,6 @@
 {% load i18n %}
+{% load absolute_url %}
+
 {% with bgcolor=bgcolor|default:"#E1E1E1" textcolor=textcolor|default:"#828282" text=text|default:"" width=width|default:"800"%}
 
 <!-- EMAIL HEADER // -->
@@ -51,12 +53,15 @@
                       <td align="right" valign="middle" class="flexibleContainerBox">
                         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:100%;">
                           <tr>
+                            {% if browser_url%}
                             <td align="left" class="textContent">
                               <!-- CONTENT // -->
+
                               <div style="font-family:Helvetica,Arial,sans-serif;font-size:13px;color:{{textcolor}};text-align:center;line-height:120%;">
-                                {% trans 'str_email_message_display_issue'%} <a href="#" target="_blank" style="text-decoration:none;border-bottom:1px solid {{textcolor}};color:{{textcolor}};"><span style="color:{{textcolor}};">{% trans 'str_email_view_in_browser' %}</span></a>
+                                {% trans 'str_email_message_display_issue'%} <a href="{% absolute_url browser_url%}" target="_blank" style="text-decoration:none;border-bottom:1px solid {{textcolor}};color:{{textcolor}};"><span style="color:{{textcolor}};">{% trans 'str_email_view_in_browser' %}</span></a>
                              </div>
                             </td>
+                            {% endif %}
                           </tr>
                         </table>
                       </td>
