--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -24,6 +24,7 @@
                 <li><a href="{% url 'faq'%}">{% trans "str_FAQ" %}</a></li>
                 <li><a href="{% url 'on_site'%}">{% trans "str_On_site" %}</a></li>
                 <li><a href="{% url 'pilot_informations'%}">{% trans "str_Pilots_information" %}</a></li>
+                <li><a href="{% url 'slot_aviable'%}">{% trans 'str_Timeslot_aviable'%}</a></li>
             </ul>
         </div>
         <div class="col-sm">
