--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -22,7 +22,7 @@
 
   {% endblock%}
 
-  <header class="jumbotron my-4">
+  <header class="jumbotron my-4" style="">
     {% block header%}
     {% endblock %}
   </header>
