--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -34,7 +34,8 @@
           <div class="card-body p-0">
             <!-- Nested Row within Card Body -->
             <div class="row">
-              <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+              <div class="col-lg-6 d-none d-lg-block" style="background:url({% static 'img/squadron_1.JPG'%});background-position:center;background-size:cover;">
+              </div>
               <div class="col-lg-6">
                 <a href="{% url 'index' %}"><i class="fas fa-chevron-circle-left"></i>{%trans 'str_Back'%}</a>
 
