--- a/meeting/templates/index.html
+++ b/meeting/templates/index.html
@@ -43,15 +43,14 @@
       <p class="card-text">{{ paramotor_pilot.content | safe}}</p>
     </div>
     <div class="card-footer">
-      <!-- TODO add link -->
-      <a href="#" class="btn btn-primary">{% trans 'str_Download_form'%}</a>
+      <a href="http://www.ulmblois.fr/" class="btn btn-primary">{% trans 'str_Register'%}</a>
     </div>
   </div>
 </div>
 
 <div class="col-lg-3">
   <div class="card h-100">
-    <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+    <img class="card-img-top" src="https://placehold.it/500x325" alt="">
     <div class="card-body">
       <h4 class="card-title">{% trans "str_PPL_pilot"%}</h4>
       {% get_chunk 'ppl_pilot_short' as ppl_pilot %}
@@ -59,8 +58,7 @@
       <p class="card-text">{{ppl_pilot.content | safe}}</p>
     </div>
     <div class="card-footer">
-      <!-- TODO add link -->
-      <a href="#" class="btn btn-primary">{% trans 'str_Register'%}</a>
+      <a href="http://www.ulmblois.fr/" class="btn btn-primary">{% trans 'str_Register'%}</a>
     </div>
   </div>
 </div>
@@ -75,8 +73,7 @@
       <p class="card-text">{{ exhibitor.content | safe}}</p>
     </div>
     <div class="card-footer">
-      <!-- TODO add link -->
-      <a href="#" class="btn btn-primary">{% trans 'str_Find_out_more' %}</a>
+      <a href="http://www.ulmblois.fr/" class="btn btn-primary">{% trans 'str_Register' %}</a>
     </div>
   </div>
 </div>
