--- a/meeting/templates/index.html
+++ b/meeting/templates/index.html
@@ -50,7 +50,7 @@
 
 <div class="col-lg-3">
   <div class="card h-100">
-    <img class="card-img-top" src="https://placehold.it/500x325" alt="">
+    <img class="card-img-top" src="{% static 'img/ground_2.JPG'%}" alt="">
     <div class="card-body">
       <h4 class="card-title">{% trans "str_PPL_pilot"%}</h4>
       {% get_chunk 'ppl_pilot_short' as ppl_pilot %}
