--- a/pages/templates/pilot_informations.html
+++ b/pages/templates/pilot_informations.html
@@ -2,7 +2,7 @@
 {% load chunks %}
 {% load i18n %}
 {% load render %}
-
+{% load static %}
 
 {% block header %}
   <h1>{% trans "str_Pilots_information" %}</h1>
