--- a/pages/templates/pilot_informations.html
+++ b/pages/templates/pilot_informations.html
@@ -14,8 +14,7 @@
 {{ general_info.content | safe }}
 
 <h1>{% trans "str_Microlight_in_flight_arrival" %}</h1>
-{% get_chunk 'pilot_info_arrival' as arrival_chunk %}
-{% render arrival_chunk.content as arrival%}
+{% get_chunk 'pilot_info_arrival' as arrival %}
 {{arrival.content | safe }}
 
 <h1>{% trans "str_Microlight_departure" %}</h1>
