--- a/meeting/templates/aviable_timeslot.html
+++ b/meeting/templates/aviable_timeslot.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block header %}
-{% trans 'str_Timeslot_aviable'%}
+<h1>{% trans 'str_Timeslot_aviable'%}</h1>
 {% endblock %}
 
 {% block content %}
