--- a/meeting/templates/aviable_timeslot_logged.html
+++ b/meeting/templates/aviable_timeslot_logged.html
@@ -1,10 +1,11 @@
-{% extends 'base_generic.html'%}
+{% extends "base_logged.html" %}
 {% load i18n %}
 
-{% block header %}
-<h1>{% trans 'str_Timeslot_aviable'%}</h1>
+{% block page_title %}
+{% trans 'str_Timeslot_aviable'%}
 {% endblock %}
+
 
 {% block content %}
 {% include 'includes/elements/slots_aviable_table.html'%}
-{% endblock %}
+{% endblock%}
