--- a/templates/base/base_logged.html
+++ b/templates/base/base_logged.html
@@ -10,7 +10,7 @@
   <meta name="author" content="">
 
   <title>{% block title %}{% trans "str_Salon_Ulm_de_Blois" %}{% endblock %}</title>
-
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <!-- Custom fonts for this template-->
   <link href="{% static 'vendor/fontawesome-free/css/all.min.css'%}" rel="stylesheet" type="text/css">
 
