--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -3,6 +3,7 @@
 <title>{% block title %}{% trans "str_Salon_Ulm_de_Blois" %}{% endblock %}</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"> <!--TODO move to vendor folder -->
 <link href="{% static 'css/heroic-features.css' %}" rel="stylesheet">
 
