--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" href="{% static 'img/favicon.ico'%}" type="image/x-icon">
-<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"> <!--TODO move to vendor folder -->
+<link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 <link href="{% static 'css/heroic-features.css' %}" rel="stylesheet">
 
 <style>
@@ -41,7 +41,7 @@
 
 </body>
 
-<script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
+<script src="{% static 'vendor/jquery/jquery-3.4.1.min.js'%}"></script>
 <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
 {% block javascript %}
 {% endblock %}
